[package]
name = "rust-torrent-client"
version = "0.1.0"
authors = ["paranoidandroid81 <mpk44@pitt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencode = "0.1.16"
mockall = "0.6.0"
sha-1 = "0.8.2"
rustc-serialize = "0.3.24"
regex = "1.3.3"