[package]
name = "rust-torrent-client"
version = "0.1.0"
authors = ["paranoidandroid81 <mpk44@pitt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.11.0"
serde_bencode = "0.2.3"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_bytes = "0.11.5"